# SuperNovaAgent

./: Cargo.toml  README.md  README.zh-CN.md
crates/product_runtime/: Cargo.toml
crates/product_runtime/src/: app_paths.rs  app_state.rs  bootstrap.rs  error.rs  kernel_worker.rs  lib.rs  main.rs
crates/product_runtime/src/http/: extractors.rs  middleware.rs  mod.rs  router.rs  server.rs  sse.rs
crates/product_runtime/src/http/routes/: artifacts.rs  chat.rs  containers.rs  context_pack.rs  diagnostics.rs  mod.rs  model_config.rs  runs.rs  (+4 more)
crates/product_runtime/src/kernel/: event_projection.rs  kernel_bridge.rs  mod.rs
crates/product_runtime/src/services/: artifact_service.rs  capability_manifest_service.rs  chat_service.rs  container_service.rs  context_pack_service.rs  diagnostics_service.rs  mod.rs  model_config_service.rs  run_manager.rs  settings_service.rs  task_service.rs  workspace_service.rs
crates/product_runtime/src/state/: message_feed.rs  migrations.rs  mod.rs  product_db.rs  projection_shards.rs  run_registry.rs  runtime_event_log.rs  workspace_registry.rs
crates/product_runtime/tests/: process_kernel_worker.rs
desktop_shell/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop_shell/src-tauri/capabilities/: default.json
desktop_shell/src-tauri/src/: lib.rs  main.rs
process_kernel/: Cargo.toml
process_kernel/src/: action.rs  agent_container.rs  agent_prompt.rs  approval_runtime.rs  artifact_runtime.rs  capability_argument_error.rs  capability_kernel.rs  chat_runtime.rs  chat_truth.rs  child_process.rs  client_env_runtime.rs  closure_gate.rs  container_context.rs  container_store.rs  context_budget.rs  context_compaction.rs  context_pack.rs  context_window.rs  data_runtime.rs  deepseek_provider.rs  kernel_api.rs  lib.rs  model_config.rs  model_retry.rs  model_runtime.rs  model_stream.rs  observation.rs  office_runtime.rs  os_runtime.rs  package_runtime.rs  provider_credentials.rs  provider_debug.rs  provider_tool.rs  provider_tool_loop_executor.rs  provider_toolset.rs  provider_transcript.rs  read_only_capability_executor.rs  reasoning.rs  root_process.rs  source_guidance.rs  (+5 more)
(+189 files in other folders)
